--- a/src/app/cardRow/cardRow.component.html
+++ b/src/app/cardRow/cardRow.component.html
@@ -1,3 +1,3 @@
-<mat-checkbox (click)="toggler()" [checked]="todo.isCompleted" [style.textDecoration]="todo.isCompleted ? 'line-through' : 'none'">
+<mat-checkbox (click)="toggler()" (change)="test()" [disableRipple]="true" [checked]="completed" [style.textDecoration]="todo.isCompleted ? 'line-through' : 'none'">
 	{{ todo.text }}
 </mat-checkbox>
