--- a/src/app/modal-new-project/modal-new-project.component.sass
+++ b/src/app/modal-new-project/modal-new-project.component.sass
@@ -31,6 +31,6 @@
 		padding: 0.5rem
 		outline: none
 		border: 1px solid #d4d9de
-		width: 25rem
+		max-width: 100%
 		height: 3rem
 		margin: 1rem 0 
