--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -18,3 +18,12 @@
 
 .add-icon
 	font-size: 2rem
+
+@media only screen and (max-width: 1000px)
+	.cards
+		grid-template-columns: repeat(2, 1fr)
+
+@media only screen and (max-width: 670px)
+	.cards
+		margin: 0
+		grid-template-columns: repeat(1, 1fr)
