--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -14,6 +14,7 @@
 	grid-auto-flow: row
 	grid-template-columns: repeat(3, 1fr)
 	grid-gap: 3rem
+	margin: 3rem
 
 @media only screen and (max-width: 1000px)
 	.cards
